tests/negative/unterminated_nested_comment.rkl
(print 1) /* outer /* inner closed */ but outer is not
